# NekOS

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  linker.ld
.cargo/: config.toml
programs/: console.rs  hello.S  shell.rs  user.ld
src/: main.rs
src/arch/: mod.rs
src/arch/riscv/: csr.rs  initrd.S  mod.rs  sbi.rs  start.S  trap.S  user.S
src/drivers/: mod.rs  plic.rs  uart.rs
src/kernel/: exec.rs  idle.rs  initrd.rs  ipc.rs  mod.rs  page.rs  pgtable.rs  syscall.rs  task.rs  timer.rs  trap.rs  vm.rs
src/user/: console.rs  io.rs  ipc.rs  mod.rs  shell.rs
user/: Cargo.toml  build.rs
user/include/: errno.h  fcntl.h  nekos.h  printf.h  stdio.h  stdlib.h  unistd.h
user/include/sys/: types.h  wait.h
user/libc/: crt0.S  fd_table.c  malloc.c  nekos.c  posix.c  printf.c
user/programs/console/: Cargo.toml
user/programs/console/src/: main.rs
user/programs/fs-server/: Cargo.toml
user/programs/fs-server/src/: main.rs
user/programs/heap-test/src/: main.c
user/programs/hello/: Cargo.toml
user/programs/hello-c/src/: main.c
user/programs/hello/src/: main.rs
user/programs/linked-list-test/src/: main.c
user/programs/posix-test/src/: main.c
user/programs/shell/: Cargo.toml
user/programs/shell/src/: main.rs
user/programs/shutdown/src/: main.c
user/programs/test/: Cargo.toml
user/programs/test-c/src/: main.c
user/programs/test/src/: main.rs
user/userlib/: Cargo.toml
user/userlib/src/: io.rs  ipc.rs  lib.rs  print.rs  syscall.rs
