[package]
name = "nekos"
version = "0.1.0"
edition = "2021"
authors = ["kuroneko359"]
description = "nekos, a RISC-V microkernel operating system written in Rust"

[[bin]]
name = "nekos"
path = "src/main.rs"
test = false
bench = false

[dependencies]
spin = "0.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
